Brightened up the main heading to help it stand out from the background on phones. Attempted fix of Irish Radioplayer navbar positioning on mobile. Updated download section text.

--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -19,6 +19,9 @@ body {
   text-align: center;
   color: #ddd;
 }
+.jumbotron h1 {
+  color: #fff;
+}
 .btn-primary {
   background-color: #181;
   border-color: #161;
